# teleme_chat_app

./: .gitignore  .sesskey  README.md  app.py  grok_app.py  hello.py  pyproject.toml
config/: settings.py
models/: chat.py
scripts/: data.json  store_appointment_data.py  store_knowledge_base.py  test_dashscope.ipynb  test_grok.ipynb  test_llama.ipynb
services/: ai_service.py  search_service.py
static/css/: style.css
static/js/: sources.js
ui/: pages.py
ui/components/: chat.py  sources.py
